<resources>
    <string name="app_name">Smile Counter</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_app_main">Smile Counter</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section4">Section 4</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="login_title">Iniciar Sesion</string>
    <string name="login_user">Usuario</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_btnLogin">Ingresar</string>
    <string name="login_message"></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Ui strings-->
    <string name="loading_message">Cargando, espere!</string>

    <!--Notification  -->
    <string name="notification_message">Haven\'t you smiled today yet</string>

    <!--Social Networks -->
    <string name="facebook_app_id">1645675518987334</string>

    <!--Report  -->
    <string name="lbl_daily_status">Daily Smiles Level</string>
    <string name="lbl_std">Smiles this Day</string>
    <string name="lbl_stw">Smiles this Week</string>
    <string name="lbl_stm">Smiles this Month</string>
    <string name="lbl_avg_spd">Average Smiles per Day</string>
    <string name="lbl_avg_spw">Average Smiles per Week</string>
    <string name="lbl_avg_spm">Average Smiles per Month</string>

    <string name="btn_daily">Daily</string>
    <string name="btn_monthly">Monthly</string>
    <string name="btn_show_chart">Show Chart</string>
    <string name="btn_hide_chart">Hide Chart</string>

    <!--Conf -->
    <string name="lbl_widget_conf">Counter Configuration</string>
    <string name="txt_counter_val_prefix">Smiles:</string>
    <string name="btn_reset_counter">Reset Counter</string>
    <string name="btn_subtract_counter">Subtract 1</string>
    <string name="alert_message">The Counter Will Be Set To 0</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>

    <!-- Ads -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Help -->
    <string name="enable_widget_help">Put the Smile Counter Widget on your Home Screen and enjoy yourself counting the happy moments :)</string>
</resources>
