<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffaedf8"
    android:id="@+id/container_scrollable">

<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">
        <TextView
            android:text="@string/lbl_widget_conf"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

    </LinearLayout>

    <View android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#55aa55"
        ></View>

    <TextView
        android:id="@+id/lbl_counter_val"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_reset_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_reset_counter"
            android:background="@drawable/btn_shape_selector"
            android:textColor="#fffffbfa"
            android:layout_margin="10dp" />
        <Button
            android:id="@+id/btn_subtract_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_subtract_counter"
            android:background="@drawable/btn_shape_selector"
            android:textColor="#fffffbfa"
            android:layout_margin="10dp" />
    </LinearLayout>

</LinearLayout>
</ScrollView>